--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
       </div>
       <nav>
         <ul>
-          <a href=""><li>Início</li></a>
-          <a href=""><li>Serviços</li></a>
-          <a href=""><li>Sobre</li></a>
-          <a href=""><li>Contato</li></a>
-          <a href=""><li>Já tem uma conta?</li></a>
+          <a href="#"><li>Início</li></a>
+          <a href="#"><li>Serviços</li></a>
+          <a href="#"><li>Contato</li></a>
+          <a href="#" id="subscribe"><li>Já tem uma conta?</li></a>
         </ul>
       </nav>
     </header>
@@ -34,10 +33,10 @@
         <h2><span>Inscreva-se agora</span></h2>
         <h2>e obtenha seu site</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-          consequatur, ducimus delectus, excepturi neque facere soluta sed
-          commodi nulla quidem eveniet. Iusto aliquam harum eum explicabo
-          aperiam fugit enim sapiente.
+          Bem vindos! primeiramente para termos uma melhor experiência, você
+          pode deixar seus dados, para que assim eu possa entrar em contato para
+          a gente ter continuidade e contruir o seu site do jeitinho desejado.
+          Vamos simbora!!
         </p>
         <form>
           <input type="text" placeholder="Nome" />
