--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
     <main>
-      <aside>
+      <section>
         <h2><span>Inscreva-se agora</span></h2>
         <h2>e obtenha seu site</h2>
         <p>
@@ -43,10 +43,10 @@
           <input type="email" placeholder="E-mail" />
           <input type="submit" value="Enviar >" />
         </form>
-      </aside>
-      <article>
+      </section>
+      <section>
         <img src="Images/undraw_programming_re_kg9v.svg" alt="programming" />
-      </article>
+      </section>
     </main>
   </body>
 </html>
