--- a/index.html
+++ b/index.html
@@ -30,22 +30,26 @@
     </header>
     <main>
       <section>
-        <h2><span>Inscreva-se agora</span></h2>
-        <h2>e obtenha seu site</h2>
-        <p>
-          Bem vindos! primeiramente para termos uma melhor experiência, você
-          pode deixar seus dados, para que assim eu possa entrar em contato para
-          a gente ter continuidade e contruir o seu site do jeitinho desejado.
-          Vamos simbora!!
-        </p>
-        <form>
-          <input type="text" placeholder="Nome" />
-          <input type="email" placeholder="E-mail" />
-          <input type="submit" value="Enviar >" />
-        </form>
+        <div class="wrapp-content">
+          <h2><span>Inscreva-se agora</span></h2>
+          <h2>e obtenha seu site</h2>
+          <p>
+            Bem vindos! primeiramente para termos uma melhor experiência, você
+            pode deixar seus dados, para que assim eu possa entrar em contato
+            para a gente ter continuidade e contruir o seu site do jeitinho
+            desejado. Vamos simbora!!
+          </p>
+          <form>
+            <input type="text" placeholder="Nome" />
+            <input type="email" placeholder="E-mail" />
+            <input type="submit" value="Enviar >" />
+          </form>
+        </div>
       </section>
       <section>
-        <img src="Images/undraw_programming_re_kg9v.svg" alt="programming" />
+        <div class="wrapp-image">
+          <img src="Images/undraw_programming_re_kg9v.svg" alt="programming" />
+        </div>
       </section>
     </main>
   </body>
