--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="sections section1">
         <div class="wrapp-content">
           <h2><span>Inscreva-se agora</span></h2>
           <h2>e obtenha seu site</h2>
@@ -45,9 +45,7 @@
             <input type="submit" value="Enviar >" />
           </form>
         </div>
-      </section>
-      <section>
-        <div class="wrapp-image">
+        <div>
           <img src="Images/undraw_programming_re_kg9v.svg" alt="programming" />
         </div>
       </section>
