--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav>
         <ul>
           <a href="#"><li>Início</li></a>
-          <a href="#"><li>Serviços</li></a>
+          <a href="#services"><li>Serviços</li></a>
           <a href="#"><li>Contato</li></a>
           <a href="#" id="subscribe"><li>Já tem uma conta?</li></a>
         </ul>
@@ -36,7 +36,7 @@
           <p>
             Bem vindos! primeiramente para termos uma melhor experiência, você
             pode deixar seus dados, para que assim eu possa entrar em contato
-            para a gente ter continuidade e contruir o seu site do jeitinho
+            para a gente ter continuidade e construir o seu site do jeitinho
             desejado. Vamos simbora!!
           </p>
           <form>
@@ -49,6 +49,36 @@
           <img src="Images/undraw_programming_re_kg9v.svg" alt="programming" />
         </div>
       </section>
+      <section class="sections section2">
+        <h2 id="services">Serviços</h2>
+        <div class="wrapp-contain">
+          <p>
+            Olá, me chamo Luiz Filipe e estou aqui para te mostrar como funciona
+            meu trabalho. Para você que tem algum negócio, empresa ou algo
+            relacionado, que deseje obter uma visibilidade maior, eu posso te
+            ajudar nisso! Crio para você, um site do jeitinho desejado, visando
+            que seu negócio tenha um <span>UPGRADE</span>, assim conseguindo
+            consequentemente, atrair cada vez mais novos clientes.
+          </p>
+          <img src="Images/undraw_interview_re_e5jn.svg" alt="" />
+        </div>
+        <h4 class="servic">Veja alguns projetos desenvolvidos por mim:</h4>
+        <div class="wrapp-images">
+          <a
+            href="https://filipee01.github.io/Portifolio-eloyna/"
+            target="_blank"
+            ><img src="Images/eloyna.png" alt="Portifolio-eloyna" />Portifólio
+            da Nutri</a
+          >
+          <a href="https://filipee01.github.io/Meu-portif-lio/" target="_blank"
+            ><img
+              src="Images/Meu portifolio .png"
+              alt="Meu-portifolio"
+            />Portifólio Luiz Filipe</a
+          >
+        </div>
+      </section>
     </main>
+    <footer></footer>
   </body>
 </html>
