--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
     <title>Filipe Dev</title>
   </head>
   <body>
@@ -19,11 +23,11 @@
         <h1>Filipe</h1>
         <h1>Dev</h1>
       </div>
-      <nav>
+      <nav id="init">
         <ul>
-          <a href="#"><li>Início</li></a>
+          <a href="#init"><li>Início</li></a>
           <a href="#services"><li>Serviços</li></a>
-          <a href="#"><li>Contato</li></a>
+          <a href="#contacte"><li>Contato</li></a>
           <a href="#" id="subscribe"><li>Já tem uma conta?</li></a>
         </ul>
       </nav>
@@ -79,6 +83,16 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer id="contacte">
+      <h3 class="footer-finish">Entre em contato:</h3>
+      <div class="contact">
+        <a href="https://github.com/Filipee01" target="_blank"><img src="Images/icons8-github (2).svg" alt="github"></i></a>
+        <a href="https://wa.me/5581989774161" target="_blank"><img src="Images/icons8-whatsapp (1).svg" alt="wpp" /></a>
+        <a href="https://www.linkedin.com/in/filipee01/" target="_blank"><img src="Images/icons8-linkedin-circundado.svg" alt="linkedin" /></a>
+      </div>
+      <div class="finish">
+        <p>Site criado por &copy; Luiz Filipe</p>
+      </div>
+    </footer>
   </body>
 </html>
