--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <p>
             Olá, me chamo Luiz Filipe e estou aqui para te mostrar como funciona
             meu trabalho. Para você que tem algum negócio, empresa ou algo
-            relacionado, que deseje obter uma visibilidade maior, eu posso te
+            relacionado, que deseja obter uma visibilidade maior, eu posso te
             ajudar nisso! Crio para você, um site do jeitinho desejado, visando
             que seu negócio tenha um <span>UPGRADE</span>, assim conseguindo
             consequentemente, atrair cada vez mais novos clientes.
