--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <form>
             <input type="text" placeholder="Nome" />
             <input type="email" placeholder="E-mail" />
+            <input type="password" placeholder="Senha" />
             <input type="submit" value="Enviar >" />
           </form>
         </div>
