--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,72 +15,85 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
     />
-    <title>Filipe Dev</title>
+    <title>Edmundo Relativity</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <h1>Filipe</h1>
-        <h1>Dev</h1>
+        <h1>Edmundo</h1>
+        <h1>Relativity</h1>
       </div>
       <nav id="init">
         <ul>
           <a href="#init"><li>Início</li></a>
-          <a href="#services"><li>Serviços</li></a>
-          <a href="#contacte"><li>Contato</li></a>
-          <a href="#" id="subscribe"><li>Já tem uma conta?</li></a>
+          <a href="#mural1"><li>Avisos</li></a>
+          <a href="#list"><li>Listas</li></a>
+          <a href="mailto:edmundo@fisica.ufpb.br" id="subscribe" target="_blank"><li>Entre em contato</li></a>
         </ul>
       </nav>
     </header>
     <main>
       <section class="sections section1">
         <div class="wrapp-content">
-          <h2><span>Inscreva-se agora</span></h2>
-          <h2>e obtenha seu site</h2>
+          <h2><span>Curso de Física Geral I: Mecânica Newtoniana</span></h2>
+          <h3>Prof. Edmundo M. Monte</h3>
+          <div class="image-ed"><img class="ed" src="https://sig-arq.ufpb.br/arquivos/201614901416b023931514eea9ad6907/20131216_142919-1.jpg" alt=""></div>
           <p>
-            Bem vindos! primeiramente para termos uma melhor experiência, você
-            pode deixar seus dados, para que assim eu possa entrar em contato
-            para a gente ter continuidade e construir o seu site do jeitinho
-            desejado. Vamos simbora!!
+            Bem vindos! Me chamo Edmundo Monte e Possuo graduação em bacharelado em matemática pela UFPB, mestrado em Ciências Atmosféricas pela UFPB , especialização em Física UFPB e doutorado em Matemática-Relatividade pela Universidade de Brasília-UnB , pós-doutorado em Relatividade no International Centre for Theoretical Physics-ICTP-Itália (Mathematical Section); pós-doutorado em Relativadade na Facultad de Ciencias UGR-Espanha . Atualmente é Professor Titular do Departamento de Física da Universidade Federal da Paraíba, João Pessoa, Brasil.
           </p>
-          <form>
-            <input id="cep" type="text" placeholder="CEP" />
-            <input id="cidade" type="text" placeholder="Cidade" />
-            <input id="uf" type="text" placeholder="UF" />
-            <input id="btn" type="submit" value="Enviar >" />
-          </form>
+          <div class="mural">
+            <h2 id="mural1" class="avisos">Mural de Avisos</h2>
+              <ul class="avisos1">
+                <li>Estudem as notas de aula do professor, livro do Halliday, os exercícios resolvidos do Halliday, os que estão listados aqui, façam também as listas de execícios propostos.</li>
+                <li>Consultem o Curso de Física I  da UAB</li>
+                <li>Tirar dúvidas com o prof. e os monitores (horários  com o professor)</li>
+                <li>Observem as datas de nossas Provas</li>
+                <li>Vejam suas notas : SIGAA</li>
+              </ul>
+          </div>
         </div>
         <div>
-          <img src="Images/undraw_programming_re_kg9v.svg" alt="programming" />
+          <img src="Images/undraw_teaching_re_g7e3.svg" alt="programming" />
         </div>
       </section>
       <section class="sections section2">
-        <h2 id="services">Serviços</h2>
+        <h2 id="list">Lista de exercícios</h2>
         <div class="wrapp-contain">
-          <p>
-            Olá, me chamo Luiz Filipe e estou aqui para te mostrar como funciona
-            meu trabalho. Para você que tem algum negócio, empresa ou algo
-            relacionado, que deseja obter uma visibilidade maior, eu posso te
-            ajudar nisso! Crio para você, um site do jeitinho desejado, visando
-            que seu negócio tenha um <span>UPGRADE</span>, assim conseguindo
-            consequentemente, atrair cada vez mais novos clientes.
-          </p>
-          <img src="Images/undraw_interview_re_e5jn.svg" alt="" />
+          <ul>
+            <li>Listas de exercícios resolvidos de todo o assunto: <a href="http://www.fisica.ufpb.br/~edmundo/Fisica1-exercicios-resolvidos"><span>Cap 2 a 13</span></a></li>
+            <li>Lista de exercícios propostos I: <a href="http://www.fisica.ufpb.br/~edmundo/Listas-Fisica1/Fisica1-lista1.pdf"><span>Física1-lista1</span></a></li>
+            <li>Lista de exercícios propostos II: <a href="http://www.fisica.ufpb.br/~edmundo/Listas-Fisica1/Fisica1-lista2.pdf"><span>Física1-lista2</span></a></li>
+            <li>Lista de exercícios propostos III: <a href="http://www.fisica.ufpb.br/~edmundo/LISTA-fisica1-estagio-3"><span>Física1-Lista3</span></a></li>
+          </ul>
+          <img src="Images/undraw_geniuses_9h9g.svg" alt="" />
         </div>
-        <h4 class="servic">Veja alguns projetos desenvolvidos por mim:</h4>
+        <h2 class="servic">Calendário Escolar</h2>
         <div class="wrapp-images">
-          <a
-            href="https://filipee01.github.io/Portifolio-eloyna/"
-            target="_blank"
-            ><img src="Images/eloyna.png" alt="Portifolio-eloyna" />Portifólio
-            da Nutri</a
-          >
-          <a href="https://filipee01.github.io/Meu-portif-lio/" target="_blank"
-            ><img
-              src="Images/Meu portifolio .png"
-              alt="Meu-portifolio"
-            />Portifólio Luiz Filipe</a
-          >
+          <h4"><span>Calendário das Avaliações:</span></h4>
+          <li><span>Prova 1:</span> data1=(cinemática em 1-D e em 2-D, Leis de Newton
+            e forças de atrito)</li>
+            <li><span>Prova 2:</span> data2=(teorema do trabalho-energia cinética, conservação de energia,
+              Sistemas de partículas e colisões em 1-D)</li>
+              <li><span>Prova 3:</span> data3=(cinemática e dinâmica da rotação de um corpo rígido)</li>
+              <li><span>Reposição 1:</span> data1=(assunto correspondente a prova 1)</li>
+              <li><span>Reposição 2:</span> data2=(assunto correspondente a prova 2)</li>
+              <li><span>Reposição 3:</span> data3=(assunto correspondente a prova 3)</li>
+              <li><span>Prova Final:</span> data-final (assunto das provas 1, 2, 3)</li>
+        </div>
+        <div class="wrapp-notes">
+          <h4>Como Calcular as Médias:</h4>
+          <span>MP=[(P1 ou R1)+(P2 ou R2)+(P3 ou R3)]/3
+            PF=prova final
+            MF=(6.MP+4.PF)/10</span>
+            <div class="notesf">
+              <h4 class="notesav">Notas das Avaliações:</h4>
+              <li>Notas da Prova 1:  </li>
+              <li>Notas da Prova 2:</li>
+              <li>Notas da Prova 3:</li>
+              <li>Notas da Reposição 1-2-3: </li>
+              <li>Nota Prova Final:</li>
+              <li>Nota Média Final:</li>
+            </div>
         </div>
       </section>
     </main>
@@ -95,19 +108,6 @@
         <p>Site criado por &copy; Luiz Filipe</p>
       </div>
     </footer>
-    <script src="./js/jquery-3.6.0.js"></script>
-    <script>
-      $(document).ready(function() {
-        $("#cep").blur(function(){
-          var valor = $(this).val()
-          $.get("https://viacep.com.br/ws/"+valor+"/json/", function(dados, status){
-            console.log(dados)
-            $("#cidade").val(dados.localidade);
-            $("#uf").val(dados.uf)
-          })
-        })
-      })
-    </script>
   </body>
 </html>
 
