--- a/index.html
+++ b/index.html
@@ -15,45 +15,31 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
     />
-    <title>Edmundo Relativity</title>
+    <title>Filipe Dev</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <h1>Edmundo</h1>
-        <h1>Relativity</h1>
+        <h1>Filipe</h1>
+        <h1>Dev</h1>
       </div>
       <nav id="init">
         <ul>
           <a href="#init"><li>Início</li></a>
           <a href="#mural1"><li>Avisos</li></a>
           <a href="#list"><li>Listas</li></a>
-          <a href="mailto:edmundo@fisica.ufpb.br" id="subscribe" target="_blank"><li>Entre em contato</li></a>
+          <a href="#" id="subscribe" target="_blank"><li>Entre em contato</li></a>
         </ul>
       </nav>
     </header>
     <main>
       <section class="sections section1">
         <div class="wrapp-content">
-          <h2><span>Curso de Física Geral I: Mecânica Newtoniana</span></h2>
-          <h3>Prof. Edmundo M. Monte</h3>
-          <div class="image-ed"><img class="ed" src="https://sig-arq.ufpb.br/arquivos/201614901416b023931514eea9ad6907/20131216_142919-1.jpg" alt=""></div>
-          <p>
-            Bem vindos! Me chamo Edmundo Monte e Possuo graduação em bacharelado em matemática pela UFPB, mestrado em Ciências Atmosféricas pela UFPB , especialização em Física UFPB e doutorado em Matemática-Relatividade pela Universidade de Brasília-UnB , pós-doutorado em Relatividade no International Centre for Theoretical Physics-ICTP-Itália (Mathematical Section); pós-doutorado em Relativadade na Facultad de Ciencias UGR-Espanha . Atualmente é Professor Titular do Departamento de Física da Universidade Federal da Paraíba, João Pessoa, Brasil.
-          </p>
-          <div class="mural">
-            <h2 id="mural1" class="avisos">Mural de Avisos</h2>
-              <ul class="avisos1">
-                <li>Estudem as notas de aula do professor, livro do Halliday, os exercícios resolvidos do Halliday, os que estão listados aqui, façam também as listas de execícios propostos.</li>
-                <li>Consultem o Curso de Física I  da UAB</li>
-                <li>Tirar dúvidas com o prof. e os monitores (horários  com o professor)</li>
-                <li>Observem as datas de nossas Provas</li>
-                <li>Vejam suas notas : SIGAA</li>
-              </ul>
-          </div>
+          <h2 class="tracking-in-contract-bck-bottom ">Olá, me chamo <span>Luiz Filipe</span></h2>
+          <h3>Sou Desenvolvedor Front-end Jr</h3>
         </div>
         <div>
-          <img src="Images/undraw_teaching_re_g7e3.svg" alt="programming" />
+          <img src="Images/EUU.png" alt="programming" />
         </div>
       </section>
       <section class="sections section2">
