--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section class="sections section2">
         <h2 id="about">Sobre</h2>
         <div class="wrapp-contain">
-          <p>Que bom ter você por aqui! Bom, para começar, me chamo Luiz Filipe, moro atualmente em João Pessoa-PB e sou estudante da UFPB. Minha história no mundo da programação se baseia no fato de ter visto um vídeo da NLW da Rocketseat, com isso eu fiquei fascinado com o que um indivíduo como eu, poderia fazer, utilizando apenas códigos que pareciam ser fáceis de aprender... Seguindo o fluxo, nunca mais parei e agora sigo firme na busca de me aperfeiçoar cada vez mais e conseguir meu primeiro emprego na área de tecnologia. Se você chegou até aqui, é um prazer!!</p>
+          <p>Que bom ter você por aqui! Bom, para começar me chamo Luiz Filipe, moro atualmente em João Pessoa-PB e sou estudante da UFPB. Minha história no mundo da programação se baseia no fato de ter visto um vídeo da NLW da Rocketseat, com isso eu fiquei fascinado com o que um indivíduo como eu, poderia fazer, utilizando apenas códigos que pareciam ser fáceis de aprender... Seguindo o fluxo, nunca mais parei e agora sigo firme na busca de me aperfeiçoar cada vez mais e conseguir meu primeiro emprego na área de tecnologia. Se você chegou até aqui, é um prazer!!</p>
           <img src="Images/undraw_feeling_proud_qne1.svg" alt="" />
         </div>
       </section>
