--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     <title>Filipe Dev</title>
   </head>
   <body onscroll="onScroll()">
-    <header>
+    <header class="">
       <div class="logo">
         <h1>Filipe</h1>
         <h1>Dev</h1>
       </div>
       <nav id="init">
         <ul>
-          <a href="#init"><li>Início</li></a>
-          <a href="#about"><li>Sobre</li></a>
-          <a href="#skills"><li>Skills</li></a>
-          <a href="#pro"><li>Projetos</li></a>
-          <a href="https://wa.link/or8zn2" id="subscribe" target="_blank"><li>Entre em contato</li></a>
+          <a  href="index.html"><li>Início</li></a>
+          <a  href="#about"><li>Sobre</li></a>
+          <a  href="#skills"><li>Skills</li></a>
+          <a  href="#pro"><li>Projetos</li></a>
+          <a  href="https://wa.link/or8zn2" id="subscribe" target="_blank"><li>Entre em contato</li></a>
         </ul>
       </nav>
     </header>
@@ -90,6 +90,7 @@
         <p>Site criado por &copy; Luiz Filipe</p>
       </div>
     </footer>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="main.js"></script>
   </body>
 </html>
