--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Filipe Dev</title>
   </head>
   <body onscroll="onScroll()">
-    <header class="">
+    <header class="background-header">
       <div class="logo">
         <h1>Filipe</h1>
         <h1>Dev</h1>
@@ -34,7 +34,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main id="top-button">
       <section class="sections section1">
         <div class="wrapp-content">
           <h2>Olá, me chamo <span>Luiz Filipe</span></h2>
@@ -79,6 +79,8 @@
             <a href="https://filipee01.github.io/Cracha/" target="_blank"><img src="Images/crachazin.png" alt="calculadora">Crachá Nlw</a>
           </div>
         </section>
+        <button id="top-buttonJs" class="">
+          <a href="#top-button"><img src="Images/undraw_handcrafts_arrow.svg" alt="seta"></a></button>
     </main>
     <footer id="contacte">
       <h3 class="footer-finish">Entre em contato:</h3>
