--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <nav id="init">
         <ul>
-          <a  href="index.html"><li>Início</li></a>
+          <a  href="#top-button"><li>Início</li></a>
           <a  href="#about"><li>Sobre</li></a>
           <a  href="#skills"><li>Skills</li></a>
           <a  href="#pro"><li>Projetos</li></a>
