--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a  href="#about"><li>Sobre</li></a>
           <a  href="#skills"><li>Skills</li></a>
           <a  href="#pro"><li>Projetos</li></a>
-          <a  href="https://wa.link/or8zn2" id="subscribe" target="_blank"><li>Entre em contato</li></a>
+          <a  href="https://wa.link/or8zn2" id="subscribe"><li>Entre em contato</li></a>
         </ul>
       </nav>
     </header>
@@ -39,6 +39,7 @@
         <div class="wrapp-content">
           <h2>Olá, me chamo <span>Luiz Filipe</span></h2>
           <h3>Sou Desenvolvedor Front-end Jr</h3>
+          <a id="cv" href="https://drive.google.com/uc?export=download&id=1QhhN-LDlkACn5MuNwMF1zcKBkLlKMpPE" target="_blank">Baixar CV</a>
         </div>
         <div>
           <img class="image-profile" src="Images/EUU.png" alt="programming" />
@@ -72,11 +73,19 @@
           <h2 id="pro">Projetos</h2>
           <div class="projects-git">
             <a href="https://filipee01.github.io/CALCULADORA-S/" target="_blank"><img src="Images/calc.PNG" alt="calculadora">Calculadora Js</a>
-            <a href="https://filipee01.github.io/Portifolio-eloyna/" target="_blank"><img src="Images/elo.png" alt="elo"> Portifólio Eloyna</a>
+            <a href="https://cep-dusky.vercel.app/" target="_blank"><img src="Images/cepSearch.PNG" alt="cep"> Buscador de CEP</a>
           </div>
           <div class="projects-git">
-            <a href="https://filipee01.github.io/Mude-sua-cor-de-fundo-/" target="_blank"><img src="Images/fundo.png" alt="calculadora">Mude sua cor de fundo</a>
+            <a href="https://pokedexflpdev.netlify.app/" target="_blank"><img src="Images/pokedex.PNG" alt="pokedex">Pokedex</a>
+            <a href="https://promocaodeiphones13.netlify.app/" target="_blank"><img src="Images/iphone13.png" alt="apple">Iphone 13</a>
+          </div>
+          <div class="projects-git">
+            <a href="https://jogodamemoriaflp.netlify.app/" target="_blank"><img src="Images/memoryGame.png" alt="memoryGame">Jogo da Memória</a>
             <a href="https://filipee01.github.io/Cracha/" target="_blank"><img src="Images/crachazin.png" alt="calculadora">Crachá Nlw</a>
+          </div>
+          <div class="projects-git">
+            <a href="https://lfilipelinktree.netlify.app/" target="_blank"><img src="Images/linktree.png" alt="linktree">Linktree</a>
+            <a href="https://filipee01.github.io/nlwReturn/" target="_blank"><img src="Images/doctorCareNlw.png" alt="nlw">Doctor Care NLW Return</a>
           </div>
         </section>
         <button id="top-buttonJs" class="">
