--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a  href="#about"><li>Sobre</li></a>
           <a  href="#skills"><li>Skills</li></a>
           <a  href="#pro"><li>Projetos</li></a>
-          <a  href="https://wa.link/or8zn2" id="subscribe"><li>Entre em contato</li></a>
+          <a  href="https://wa.link/or8zn2" id="subscribe" target="_blank"><li>Entre em contato</li></a>
         </ul>
       </nav>
     </header>
