--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
           <a  href="#pro"><li>Projetos</li></a>
           <a  href="https://wa.link/or8zn2" id="subscribe" target="_blank"><li>Entre em contato</li></a>
         </ul>
+        <button class="hamburger-menu" type="button">
+          <span class="hamburger-menu__bar"></span>
+          <span class="hamburger-menu__bar"></span>
+          <span class="hamburger-menu__bar"></span>
+        </button>
       </nav>
     </header>
     <main id="top-button">
@@ -67,7 +72,6 @@
         <h3 class="learning">Estou aprendendo:</h3>
         <div class="wrapp-images-bot">
           <img src="Images/react-svgrepo-com.svg" alt="REACT">
-          <img src="Images/icons8-servidor-php-100.png" alt="PHP">
         </div>
         <section class="section3">
           <h2 id="pro">Projetos</h2>
