--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
     />
+    <link rel="stylesheet" href="style2.css">
     <title>Filipe Dev</title>
   </head>
   <body onscroll="onScroll()">
@@ -39,7 +40,7 @@
         <div class="wrapp-content">
           <h2>Olá, me chamo <span>Luiz Filipe</span></h2>
           <h3 class="text-information">Estudante de Ciência da Computação - CI UFPB</h3>
-          <a id="cv" href="https://drive.google.com/uc?export=download&id=1QhhN-LDlkACn5MuNwMF1zcKBkLlKMpPE" target="_blank">Baixar CV</a>
+          <!-- <a id="cv" href="https://drive.google.com/uc?export=download&id=1QhhN-LDlkACn5MuNwMF1zcKBkLlKMpPE" target="_blank">Baixar CV</a> -->
         </div>
         <div>
           <img class="image-profile" src="Images/me cuted.png" alt="programming" />
@@ -67,29 +68,29 @@
         <h3 class="learning">Estou aprendendo:</h3>
         <div class="wrapp-images-bot">
           <img src="Images/react-svgrepo-com.svg" alt="REACT">
-          <img src="Images/icons8-servidor-php-100.png" alt="PHP">
+          <img src="Images/c.png" alt="C++">
         </div>
         <section class="section3">
           <h2 id="pro">Projetos</h2>
           <div class="projects-git">
-            <a href="https://filipee01.github.io/CALCULADORA-S/" target="_blank"><img src="Images/calc.PNG" alt="calculadora">Calculadora Js</a>
-            <a href="https://cep-dusky.vercel.app/" target="_blank"><img src="Images/cepSearch.PNG" alt="cep"> Buscador de CEP</a>
+            <a href="#"><img src="Images/coming.png" alt="coming">Em breve...</a>
+            <a href="#"><img src="Images/coming.png" alt="coming">Em breve...</a>
           </div>
           <div class="projects-git">
-            <a href="https://pokedexflpdev.netlify.app/" target="_blank"><img src="Images/pokedex.PNG" alt="pokedex">Pokedex</a>
-            <a href="https://promocaodeiphones13.netlify.app/" target="_blank"><img src="Images/iphone13.png" alt="apple">Iphone 13</a>
+            <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
+            <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
           </div>
           <div class="projects-git">
-            <a href="https://jogodamemoriaflp.netlify.app/" target="_blank"><img src="Images/memoryGame.png" alt="memoryGame">Jogo da Memória</a>
-            <a href="https://filipee01.github.io/Cracha/" target="_blank"><img src="Images/crachazin.png" alt="calculadora">Crachá Nlw</a>
+            <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
+            <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
           </div>
           <div class="projects-git">
-            <a href="https://lfilipelinktree.netlify.app/" target="_blank"><img src="Images/linktree.png" alt="linktree">Linktree</a>
-            <a href="https://filipee01.github.io/nlwReturn/" target="_blank"><img src="Images/doctorCareNlw.png" alt="nlw">Doctor Care NLW Return</a>
+            <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
+            <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
           </div>
         </section>
         <button id="top-buttonJs" class="">
-          <a href="#top-button"><img src="Images/undraw_handcrafts_arrow.svg" alt="seta"></a></button>
+          <a href="#top-button"><img src="Images/undraw_straight-arrow.svg" alt="seta"></a></button>
     </main>
     <footer id="contacte">
       <h3 class="footer-finish">Entre em contato:</h3>
