--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <a  href="https://wa.link/or8zn2" id="subscribe" target="_blank"><li>Entre em contato</li></a>
         </ul>
         <button class="hamburger-menu" type="button">
-          <span class="hamburger-menu__bar"></span>
-          <span class="hamburger-menu__bar"></span>
-          <span class="hamburger-menu__bar"></span>
+          <span class="hamburger-menu-bar"></span>
+          <span class="hamburger-menu-bar"></span>
+          <span class="hamburger-menu-bar"></span>
         </button>
       </nav>
     </header>
@@ -45,7 +45,7 @@
         <div class="wrapp-content">
           <h2>Olá, me chamo <span>Luiz Filipe</span></h2>
           <h3 class="text-information">Estudante de Ciência da Computação - CI UFPB</h3>
-          <!-- <a id="cv" href="https://drive.google.com/uc?export=download&id=1QhhN-LDlkACn5MuNwMF1zcKBkLlKMpPE" target="_blank">Baixar CV</a> -->
+          <a id="cv" href="https://drive.google.com/u/2/uc?id=15yTE5lEgVNhJyRmklS0zcFzTf4nF3KEx&export=download" target="_blank">Baixar CV</a>
         </div>
         <div>
           <img class="image-profile" src="Images/me cuted.png" alt="programming" />
@@ -78,16 +78,16 @@
         <section class="section3">
           <h2 id="pro">Projetos</h2>
           <div class="projects-git">
-            <a href="#"><img src="Images/coming.png" alt="coming">Em breve...</a>
-            <a href="#"><img src="Images/coming.png" alt="coming">Em breve...</a>
+            <a href="https://filipe-devv.vercel.app/" target="_blank"><img src="Images/portfolio .jpg" alt="portfolio">Portfólio</a>
+            <a href="https://desafio-filipee01.vercel.app/" target="_blank"><img src="Images/Crud.jpg" alt="crud">Formulário dinâmico(CRUD)</a>
           </div>
           <div class="projects-git">
-            <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
-            <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
+            <a href="https://filipee01.github.io/Mude-sua-cor-de-fundo-/" target="_blank"><img src="Images/change colors .jpg" alt="colors">Change colors</a>
+            <a href="https://filipee01.github.io/pokedex/" target="_blank"><img src="Images/pokedex.jpg" alt="pokedex">Pokedex</a>
           </div>
           <div class="projects-git">
-            <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
-            <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
+            <a href="https://filipee01.github.io/linktree1/" target="_blank" ><img src="Images/linktree.jpg" alt="linktree">Linktree</a>
+            <a href="https://filipee01.github.io/PortifoliodaNutri/" target="_blank" ><img src="Images/eloyna .jpg" alt="eloNutri">Portifólio Nutri</a>
           </div>
           <div class="projects-git">
             <a href="#" ><img src="Images/coming.png" alt="coming">Em breve...</a>
