--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h3 class="learning">Estou aprendendo:</h3>
         <div class="wrapp-images-bot">
           <img src="Images/react-svgrepo-com.svg" alt="REACT">
-          <img src="Images/c.png" alt="C++">
+          <img src="Images/C_logo.png" alt="C++">
         </div>
         <section class="section3">
           <h2 id="pro">Projetos</h2>
